--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Welcome to My Blog</h1>
   <p>Here are some of my projects:</p>
   <ul>
-    <li><a href="projects/aurora-simulation.html">Aurora Simulation</a></li>
+    <li><a href="docs/aurora-simulation.html">Aurora Simulation</a></li>
   </ul>
 </body>
 </html>
