Added some styling to the Blog

--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Ksenia's Projects</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Welcome to My Blog</h1>
-  <p>Here are some of my projects:</p>
+  <h1>Ksenia's Blog</h1>
+  <p>Exploring through coding</p>
+
   <ul>
-    <li><a href="docs/aurora-simulation.html">Aurora Simulation</a></li>
+    <li><a href="projects/aurora-simulation/index.html">Aurora Simulation</a></li>
+    <!-- Add more projects here as you build them -->
   </ul>
+
+  <footer>
+    <p>🔗 More on <a href="https://github.com/kseniabez" target="_blank">my GitHub profile</a></p>
+  </footer>
 </body>
 </html>
