updated aurora dev blog

--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Ksenia's Projects</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ksenia's Blog</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Ksenia's Blog</h1>
-  <p>Exploring through coding</p>
 
-  <ul>
-    <li><a href="projects/aurora-simulation/index.html">Aurora Simulation</a></li>
-    <!-- Add more projects here as you build them -->
-  </ul>
+    <h1>Ksenia's Dev Blog</h1>
 
-  <footer>
-    <p>🔗 More on <a href="https://github.com/kseniabez" target="_blank">my GitHub profile</a></p>
-  </footer>
+    <div class="container">
+        <!-- About Section -->
+        <div class="about">
+            <h2>About Me</h2>
+            <p>Hello! I'm Ksenia, a coder and an explorer of the world. Here you can see listed some projects I've worked on.</p>
+            <p>More on <a href="https://github.com/kseniabez" target="_blank">my GitHub profile</a></p>
+          </div>
+
+        <!-- Projects Section -->
+        <div class="projects">
+            <div class="project-item">
+                <h3>Aurora Simulation</h3>
+                <p>This project aims to visualize Aurora Borealis using fluid simulation. <a href="projects/aurora-simulation/index.html" target="_blank">Read more</a>.</p>
+            </div>
+            <!-- Add more projects here -->
+        </div>
+    </div>
+
+    <footer>
+        
+    </footer>
+
 </body>
 </html>
