--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -3,25 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <title>Aurora Simulation</title>
-  <link rel="stylesheet" href="../../css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Aurora Simulation</h1>
 
-  <p style="text-align: center; font-size: 1.1em; max-width: 700px; margin: 20px auto;">
-    A simulation of Aurora Borealis using fluid simulation.
+  <p>
+    A visualization of Aurora Borealis using fluid simulation. Made for a course at KTH DH2323 VT25 Computer Graphics and Interaction.
   </p>
 
   <div style="text-align: center; margin-bottom: 40px;">
-    <a href="https://github.com/kseniabez/aurora-simulation" target="_blank">🔗 View on GitHub</a>
+    <a href="https://github.com/kseniabez/aurora-simulation" target="_blank">GitHub Repository</a>
   </div>
 
   <h2 style="margin-bottom: 10px;">Development Blog</h2>
-  <ul style="margin-bottom: 40px;">
+  
+  <ul>
+    <li>
+      <h3>1. Idea</h3>
+      <p>
+        During my exchange semester in Sweden, I've had the chance to explore a lot. One of the highlights was a trip to Kiruna, which is inside the Arctic Circle. One of my dreams since childhood was to see the Northern Lights. That was one of the main reasons I decided to go on that trip.
+      </p>
+      <p>
+        So, I went there, and I saw them. It was one of the coolest things I’ve ever experienced. Below you can see some pictures my friends and I took.
+      </p>
+    
+      <!-- Image placeholder for Northern Lights -->
+      <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
+        <img src="img/IMG_3494.JPEG" alt="Northern Lights in Kiruna" style="max-width: 45%; height: auto;">
+        <img src="img/IMG_3495.JPEG" alt="Northern Lights in Kiruna" style="max-width: 45%; height: auto;">
+      </div>
+    
+      <p>
+        And this is basically how I came up with the idea for a project. I want to replicate something beautiful.
+      </p>
+    </li>
+    <li>
+      <h3>2. Specification and Plan</h3>
+      <p>
+        After getting a rough idea of what I wanted to achieve, I began outlining a plan for implementing the Aurora simulation. It quickly became clear that the task was more complex than I initially anticipated.
+      </p>
+      <p>
+        I realized that, in order to replicate the Northern Lights, there were two main challenges: first, creating the shape and movement of the aurora, and second, designing an appealing way to shade and render it. 
+      </p>
+      <p>
+        While preparing the project specification for my course coordinator, I recognized that tackling both of these aspects simultaneously might be too ambitious and difficult for the scope of the course. As a result, I decided to narrow my focus to the animation of the aurora itself, leaving the shading for later. 
+      </p>
+      <p>
+        I hope to later enhance the simulation by integrating existing shaders to improve the visual appeal. For now, I’ll prioritize perfecting the fluid simulation and the movement of the aurora, and will revisit the shading aspect once the core simulation is solid.
+      </p>
+    </li>
+
+    <li>
+      <h3>3. Fluid Simulation</h3>
+    </li>
   </ul>
 
   <footer>
-    <a href="../index.html">← Back to Home</a>
+    <a href="../../index.html">← Back to Home</a>
   </footer>
 </body>
 </html>
