Aurora - Made simulation better

--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -111,16 +111,15 @@
 
   <p>
     In my simulation, I replicate this process by gradually transforming the velocity field in accordance with these 
-    stages. The aurora begins as a smooth, flowing arc and then transitions into increasingly complex patterns, 
-    culminating in the swirling spiral geometry characteristic of active auroras.
+    stages. Currently, it only mimics the behavior of auroras by transforming the field using basic math geomteric shapes.
+    In the next stage I plan to look into the real dynamics of Aurora to perfect the animation.
   </p>
   <p>
-    Here's a preview of what it looks like in action. It still needs some work, but there is progress. The green coloring was added for aesthetic purposes, 
-    and I think it really helps to visualize what the final simulation might look like.
+    Here's a preview of what it looks like in action.
   </p>
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
     <video width="50%" height="auto" controls>
-      <source src="vid/video3.mp4" type="video/mp4">
+      <source src="vid/video4.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
