--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -82,8 +82,7 @@
   <h3>4. Aurora Motion - Spiral Simulation Phases</h3>
   <p>
     After setting up the fluid simulation, I moved on to the core of the project: shaping how the aurora moves. 
-    This involved designing time-varying velocity fields — in other words, guiding the flow to mimic patterns 
-    observed in real auroral dynamics.
+    This involved designing the velocity fields, guiding the flow to mimic patterns observed in real aurora.
   </p>
   <p>
     Drawing from T.J. Hallinan's theoretical model, auroral spirals emerge through a sequence of four distinct phases: 
@@ -101,12 +100,7 @@
   </div>
 
   <p>
-    In my simulation, I emulate this progression by gradually transforming the velocity field across phases. 
-    The aurora starts as a smooth arc and evolves into increasingly complex structures, culminating in the swirling 
-    spiral geometry characteristic of highly active auroras.
-  </p>
-
-  <p>
+    In my simulation, I emulate this progression by gradually transforming the velocity field across phases.
     While the transformation is currently driven by mathematical approximations using geometric patterns, 
     it captures the essence of auroral evolution and provides a flexible framework for future refinement.
   </p>
@@ -116,32 +110,14 @@
   </p>
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
     <video width="50%" height="auto" controls>
-      <source src="vid/video4.mp4" type="video/mp4">
+      <source src="vid/video6.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
 </li>
 <li>
   <h3>5. Simulating Aurora Curtain</h3>
-  <p>
-    With the foundational phases of auroral motion defined and tested, I moved on to simulating the entire aurora curtain. 
-    I began by rescaling the velocity field to span a larger area, allowing the full curtain structure to emerge across the simulation space. 
-    Then, I introduced multiple centers of activity — localized regions where motion patterns like oscillations and swirls could develop independently.
-  </p>
-  <p>
-    As a first test, I synchronized the oscillations across all centers to observe the overall movement. 
-    Here's what the simulation looked like at that stage:
-  </p>
-  <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
-    <video width="80%" height="auto" controls>
-      <source src="vid/video5.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  <p>
-    Next, I plan to introduce noise and variation between the centers to make the motion appear more organic and less artificial. 
-    This should help the simulation feel more natural — closer to how real auroras are in the sky.
-  </p>
+  
 </li>
   </ul>
 
