Arora Post 4 - Added Folds Animation

--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -79,7 +79,7 @@
 </li>
 
 <li>
-  <h3>4. Aurora Motion - Spiral Simulation Phases</h3>
+  <h3>4. Aurora Motion - Spirals and Curls</h3>
   <p>
     After setting up the fluid simulation, I moved on to the core of the project: shaping how the aurora moves. 
     This involved designing the velocity fields, guiding the flow to mimic patterns observed in real aurora.
@@ -100,17 +100,15 @@
   </div>
 
   <p>
-    In my simulation, I emulate this progression by gradually transforming the velocity field across phases.
-    While the transformation is currently driven by mathematical approximations using geometric patterns, 
-    it captures the essence of auroral evolution and provides a flexible framework for future refinement.
+    In my simulation, I emulate this progression by applying a steady velocity field along my wave curtain.
   </p>
 
   <p>
-    Here's a preview of the simulation in action:
+    Here's a preview of my fold(left) and curtain(right) simulations:
   </p>
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
     <video width="50%" height="auto" controls>
-      <source src="vid/video6.mp4" type="video/mp4">
+      <source src="vid/video7.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
