Aurora - Post 4 added real images of auroral folds

--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -79,7 +79,7 @@
 </li>
 
 <li>
-  <h3>4. Aurora Motion - Spirals and Curls</h3>
+  <h3>4. Aurora Motion - Folds and Spirals</h3>
   <p>
     After setting up the fluid simulation, I moved on to the core of the project: shaping how the aurora moves. 
     This involved designing the velocity fields, guiding the flow to mimic patterns observed in real aurora.
@@ -104,14 +104,24 @@
   </p>
 
   <p>
-    Here's a preview of my fold(left) and curtain(right) simulations:
+    Here's a preview of my fold simulation:
   </p>
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
     <video width="50%" height="auto" controls>
-      <source src="vid/video7.mp4" type="video/mp4">
+      <source src="vid/video8.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
+
+  <p>Taking a look at the real images of auroral folds, we can see that the simulation indeed resembles the real effect. </p>
+
+  <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
+        <img src="img/fold1.png" alt="Aurora Fold" style="max-width: 45%; height: auto;">
+        <img src="img/fold2.png" alt="Aurora Fold" style="max-width: 45%; height: auto;">
+  </div>
+  <p style="font-size: 0.9em; text-align: center; margin: auto;">
+    Examples of auroral folds from the <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018JA025274">Oslo Aurora THEMIS (OATH) dataset (2018)</a>.
+  </p>
 </li>
 <li>
   <h3>5. Simulating Aurora Curtain</h3>
