Aurora - Post 4 Added Aurora Fold & Spiral video

--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -104,16 +104,17 @@
   </p>
 
   <p>
-    Here's a preview of my fold simulation:
+    Here's a preview of my fold and spiral simulation, imitating KHI instability. It still needs some adjustment,
+    but it's nice to see something recognizable as a part of an aurora.
   </p>
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
     <video width="50%" height="auto" controls>
-      <source src="vid/video8.mp4" type="video/mp4">
+      <source src="vid/video9.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
 
-  <p>Taking a look at the real images of auroral folds, we can see that the simulation indeed resembles the real effect. </p>
+  <p>Taking a look at the real images of auroral folds, we can see that the simulation indeed resembles a little the real effect. </p>
 
   <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
         <img src="img/fold1.png" alt="Aurora Fold" style="max-width: 45%; height: auto;">
@@ -124,8 +125,7 @@
   </p>
 </li>
 <li>
-  <h3>5. Simulating Aurora Curtain</h3>
-  
+  <h3>5. Simulating the Auroral Sheet</h3>
 </li>
   </ul>
 
