--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -116,11 +116,18 @@
     <source src="vid/vid1.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-</div>
+  </div>
 
   <p>
-    Next I decided to try to simulate not just one fold, but a longer sheet.
+    Next I decided to try to simulate not just one fold, but a longer sheet. I added some noise to the vertical petrubation, so that
+    the whole sheet looks more organic. 
   </p>
+  <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
+  <video width="50%" height="auto" controls>
+    <source src="vid/vid2.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  </div>
 </li>
   </ul>
 
