--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -109,7 +109,8 @@
   </p>
   <p>
     A few errors and bug fixes later, I got my first auroral fold spiral animation. I was extremely happy by the result, because it was the first
-    time I was able to see something roughly similar:
+    time I was able to see something roughly similar. Green fluid dye was used purely for aesthetic purposes. Later when I will switch to shading,
+    I plan to animate it in white, so that color is added on top with shaders.
   </p>
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
   <video width="50%" height="auto" controls>
@@ -125,6 +126,35 @@
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
   <video width="50%" height="auto" controls>
     <source src="vid/vid2.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  </div>
+</li>
+<li>
+  <h3>5. Rendering</h3>
+  <p>
+    Now that the 2d image plate is complete, it's time to render the result and give aurora it's signiture curtain vertical shape.
+    I planned to render the aurora in Blender, since it's an environment I'm famililar with. 
+  </p>
+  <p>At first I wanted to render a single framee - make sure that I like the shading before render my whole animation.
+    Below you can see an animation frame I used and a final result in Blender.
+  </p>
+
+  <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
+    <img src="img/render1-frame.jpg" alt="Aurora Example" style="max-width: 30%; height: auto;">
+    <img src="img/render1-2.png" alt="Aurora Example" style="max-width: 60%; height: 60%;">
+  </div>
+  <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
+    <img src="img/render1-1.png" alt="Aurora Example" style="max-width: 70%;">
+  </div>
+    <p style="font-size: 0.9em; text-align: center;">
+      Animation frame used for rendering(top left), Aurora Render from space view (top right), Aurora Render from ground view(bottom).
+  </p>
+  <p>And next I tried to render the whole sequence, that was generated previously.
+    I also added some hdri texture, so that the night sky is present as well.</p>
+  <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
+  <video width="80%" height="auto" controls>
+    <source src="vid/finalRender.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   </div>
