--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
         <!-- About Section -->
         <div class="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Ksenia, a coder and an explorer of the world. Here you can see listed some projects I've worked on.</p>
+            <p>Hello! I'm Ksenia. Here you can see listed some projects I've worked on.</p>
             <p>More on <a href="https://github.com/kseniabez" target="_blank">my GitHub profile</a></p>
           </div>
 
         <!-- Projects Section -->
         <div class="projects">
             <div class="project-item">
-                <h3>Aurora Simulation</h3>
-                <p>This project aims to visualize Aurora Borealis using fluid simulation. <a href="projects/aurora-simulation/index.html" target="_blank">Read more</a>.</p>
+                <h3>Aurora Simulation using Fluid Dynamics</h3>
+                <p>This project aims to visualize Aurora Borealis using fluid dynamics. <a href="projects/aurora-simulation/index.html" target="_blank">Read more</a>.</p>
+                
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
+                    <video width="80%" height="auto" controls>
+                        <source src="projects/aurora-simulation/vid/finalRender.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            
             </div>
             <!-- Add more projects here -->
         </div>
