--- a/projects/aurora-simulation/index.html
+++ b/projects/aurora-simulation/index.html
@@ -159,6 +159,41 @@
   </video>
   </div>
 </li>
+<li>
+
+<h3>6. Conclusions</h3>
+<p>
+  This project was both a technical challenge and a creative journey. What started as a personal experience (witnessing the Northern Lights in Kiruna)
+  evolved into a full-fledged simulation and rendering pipeline inspired by fluid dynamics.
+</p>
+<p>
+  I learned a lot during this process - about fluid dynamics, aurora, about more coding in python... 
+  And also how to try and combine scientific ideas and artistic goals. There's still plenty of room for improvement, both in terms of 
+    refining the simulation and making the workflow more efficient and accesible. I'd also love to explore more physically accurate rendering techniques in the future.
+  </p>
+  <p>
+    That said, I'm genuinely proud of what I've achieved so far. 
+  </p>
+  <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
+    <img src="img/flat0077.jpg" alt="Aurora Example" style="max-width: 30%; height: auto;">
+    <img src="img/0077.png" alt="Aurora Example" style="max-width: 30%; height: auto;">
+    <img src="img/0077_2.png" alt="Aurora Example" style="max-width: 30%; height: auto;">
+  </div>
+  <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
+    <img src="img/flat0125.jpg" alt="Aurora Example" style="max-width: 30%; height: auto;">
+    <img src="img/0125.png" alt="Aurora Example" style="max-width: 30%; height: auto;">
+    <img src="img/0125_2.png" alt="Aurora Example" style="max-width: 30%; height: auto;">
+  </div>
+  <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
+    <img src="img/flat0190.jpg" alt="Aurora Example" style="max-width: 30%; height: auto;">
+    <img src="img/0190.png" alt="Aurora Example" style="max-width: 30%; height: auto;">
+    <img src="img/0190_2.png" alt="Aurora Example" style="max-width: 30%; height: auto;">
+  </div>
+  <p style="font-size: 0.9em; text-align: center;">
+    Frames from resulting fluid simulation (left), rendered aurora 
+    from the same angle(center), rendered aurora from different angle (right).
+  </p>
+</li>
   </ul>
 
   <footer>
