updated movie-app project

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             <div class="project-item">
                 <h3>Movie App - learning django and rating movies</h3>
                 <div class="project-date">October 2024 - February 2025</div>
+                <p>This project was done as an exploration of django web application development.
+                    I created an app to rate, review and discuss movies.
+                    <a href="projects/movie-app/index.html" target="_blank">Read more</a>.</p>
+                </p>
+                <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
+                    <img src="projects/movie-app/img/image1.png" alt="Aurora Example" style="max-width: 70%; height: auto;">
+                </div>
             </div>
             
             <div class="project-item">
