updated movie-app project

--- a/index.html
+++ b/index.html
@@ -49,8 +49,11 @@
             <div class="project-item">
                 <h3>Movie App - learning django and rating movies</h3>
                 <div class="project-date">October 2024 - February 2025</div>
-                <p>This project was done as an exploration of django web application development.
-                    I created an app to rate, review and discuss movies.
+                <p>
+                    This project was developed as an exploration of Django web application development.
+                    I built a web application where users can rate, review, and discuss movies. 
+                    It allowed me to practice building user accounts, managing reviews, 
+                    and creating a responsive front end.
                     <a href="projects/movie-app/index.html" target="_blank">Read more</a>.</p>
                 </p>
                 <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 20px;">
